--- a/views/css/style.css
+++ b/views/css/style.css
@@ -33,8 +33,11 @@ form {
   position: fixed;
   width: 256px;
   z-index: -1;
-  transform: translateZ(0);
-  backface-visibility: hidden;
+  /*Add prefixes (source: autoprefixer.github.io)*/
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
 }
 
 .randomPizzaContainer {
